--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -8,6 +8,7 @@
     <h1>Snake</h1>
     <canvas id="snakeBoard" width="600" height="600" style="border:1px solid #000000;"></canvas>
     <canvas id="score1Board" width="100" height="100" style="border:1px solid #000000;"></canvas>
+    <canvas id="lifeBoard" width="150" height="100" style="border:1px solid #000000;"></canvas>
 </body>
 
 </html>
