--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <audio id="lvlUp"><source src="assets/sound effect/level_up.wav" type="audio/wav"></audio>
     <audio id="eatApple"><source src="assets/sound effect/eat_apple.wav" type="audio/wav"></audio>
     <audio id="getHealth"><source src="assets/sound effect/get_health.wav" type="audio/wav"></audio>
+    <audio id="gameOverSound"><source src="assets/sound effect/game_over.wav" type="audio/wav"></audio>
     <!-- Close Audio -->
 
     <!-- Image -->
@@ -44,6 +45,12 @@
             <p id="score" style="text-align: center; font-weight: bold; font-size: 35px;"></p>
             <canvas id="score1Board" width="50" height="50"></canvas>
             <p id="speed" style="text-align: center; font-weight: bold; font-size: 30px;"></p>
+          </div>
+          <div id= "gameOver" class="text-danger pr-3" style="font-size: 50px;">
+
+          </div>
+          <div id= "levelUp" class="text-success pr-3" style="font-size: 50px;">
+
           </div>
         </div>
       </div>
